# asdf_documents

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
docs/: Makefile  conf.py  index.rst
docs/general/: hdf5_asdf_comparison.rst
general/: hdf5_asdf_comparison.rst
src/asdf_documents/:  __init__.py
