[project]
name = 'asdf_documents'
description = 'ASDF documents'
readme = 'README.md'
requires-python = '>=3.8'
license = { file = 'LICENSE' }
authors = [{ name = 'The ASDF Developers', email = 'help@stsci.edu' }]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Development Status :: 5 - Production/Stable',
]
dependencies = [
    'tomli',
    'sphinx',
    'sphinx-asdf >= 0.1.3',
    'sphinx-astropy',
    'astropy >= 5.0.4',
    'graphviz',
    'matplotlib',
    'docutils',
    'sphinx-rtd-theme',
]
dynamic = ['version']

[project.urls]
'tracker' = 'https://github.com/asdf-format/documents/issues'
'documentation' = 'https://asdf-documents.readthedocs.io/en/stable'
'repository' = 'https://github.com/asdf-format/documents'

[build-system]
requires = [
    "setuptools >=42",
    "setuptools_scm[toml] >=3.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/asdf_documents/_version.py"

[tool.black]
line-length = 120
force-exclude = '''
^/(
  (
      \.eggs
    | \.git
    | \.pytest_cache
    | \.tox
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
filter_files = true
line_length = 120
